--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <input type="text" id="nome" placeholder="Nome">
-    <input type="text" id="email" placeholder="E-mail">
-    <button id="btnCriar">Criar</button>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Cadastro de Usuário (usando Storage)</h1>
+    <input  type="text" id="nome" placeholder="Nome" />
+    <input type="text" id="email" placeholder="E-mail" />
+    <button class="btnCriar" id="btnCriar">Criar</button>
 
     <ul id="listaUsuarios"></ul>
     <script type="module" src="./main.js"></script>
-</body>
+  </body>
 </html>
+
