updated css, edited the input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Cadastro de Usuário (usando Storage)</h1>
+    <h1>Cadastro com Storage</h1>
       <input  type="text" id="nome" placeholder="Nome" />
       <input type="text" id="email" placeholder="E-mail" />
       <button class="btnCriar" id="btnCriar">Criar</button>
